Se agregan las imagenes de la practica. #5

--- a/Nivel1-A/Documentos/Guia/guia5.tex
+++ b/Nivel1-A/Documentos/Guia/guia5.tex
@@ -16,10 +16,10 @@ En la pestaña \menu{I/O Parameters} seleccione la imagen que acaba de abrir, ju
 
 \begin{figure}[h!]
     \centering
-    \subfloat[1-I/O Parameters]{\includegraphics[width=0.4\textwidth]{fig:stack1.png}\label{fig:kmeans1}}
+    \subfloat[1-I/O Parameters]{\includegraphics[width=0.4\textwidth]{fig:kmeans1.png}\label{fig:kmeans1}}
     \hspace{1cm}
-    \subfloat[Processing parameters]{\includegraphics[width=0.4\textwidth]{fig:stack3.png}\label{fig:kmeans2}}
-    \caption{Clasificación de imágenes por el método \emph{k-means}}
+    \subfloat[Processing parameters]{\includegraphics[width=0.4\textwidth]{fig:kmeans2.png}\label{fig:kmeans2}}
+    \caption{Clasificación de imágenes por el método \emph{k-means}.}
     \label{fig:kmeans}
 \end{figure}
 
@@ -35,8 +35,8 @@ Seleccione la imagen clasificada y haga click en \menu{View > Tool windows > Col
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.4\textwidth]{fig:stack1.png}
-    \caption{}
+    \includegraphics[width=0.4\textwidth]{fig:colman.png}
+    \caption{Herramienta para manejar colores y su asignación en la imagen.}
     \label{fig:colman}
 \end{figure}
 
@@ -73,10 +73,8 @@ Una vez terminado el proceso asigne a cada categoría de uso y cobertura en colo
 
 \begin{figure}[h!]
     \centering
-    \subfloat[1-I/O Parameters]{\includegraphics[width=0.4\textwidth]{fig:stack1.png}}
-    \hspace{1cm}
-    \subfloat[Processing parameters]{\includegraphics[width=0.4\textwidth]{fig:stack3.png}}
-    \caption{}
+    \includegraphics[width=0.7\textwidth]{fig:reclass.png}
+    \caption{Imagen reclasificada junto a la imagen en color real.}
     \label{fig:resclass}
 \end{figure}
 
@@ -122,8 +120,8 @@ En el SNAP es posible exportar la vista como imagen para utilizar en otro softwa
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.4\textwidth]{fig:stack1.png}
-    \caption{}
+    \includegraphics[width=0.5\textwidth]{fig:vista.png}
+    \caption{Herramienta para exportar la vista de la imagen.}
     \label{fig:vista}
 \end{figure}
 
