--- a/Nivel1-A/Documentos/Guia/preamble.tex
+++ b/Nivel1-A/Documentos/Guia/preamble.tex
@@ -79,6 +79,10 @@
 \definecolor{B27}{HTML}{A6CEE3}
 \definecolor{B28}{HTML}{1F78B4}
 
+\definecolor{P1}{HTML}{91cf60}
+\definecolor{P2}{HTML}{ffffbf}
+\definecolor{P3}{HTML}{fc8d59}
+
 % Ejemplos, observaciones y teorema
 \theoremstyle{definition}
 \newtheorem{exa}{Ejemplo}[section]
